Update dependencies, osgi headers, JPMS definitions
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>